<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/text_post"
        android:enabled="true"
        android:title="Text" />
    <item
        android:id="@+id/image_post"
        android:enabled="true"
        android:title="Image" />
</menu>